# project_heru

./: .gitignore  Makefile  README.md  docker-compose.yml
apps/backend/: .env.example  Dockerfile  README.md  pyproject.toml
apps/backend/app/: __init__.py  config.py  main.py  schemas.py
apps/backend/app/pipeline/: causal_wan_runtime.py  conditioning.py  distributed_causal_wan_runtime.py  runner.py  streamdiffusion_adapter.py  types.py
apps/backend/app/services/: session.py
apps/backend/scripts/: smoke_realtime.py
apps/backend/tests/: test_causal_wan_runtime.py  test_config_merge.py
apps/web/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo
apps/web/src/: App.tsx  styles.css
core/streamdiffusionv2/: CORE_MANIFEST.md  README.md  UPSTREAM_README.md  requirements-runtime.txt  upstream-requirements.txt
core/streamdiffusionv2/causvid/: __init__.py  data.py
core/streamdiffusionv2/causvid/models/: __init__.py
core/streamdiffusionv2/causvid/models/wan/: causal_model.py  wan_wrapper.py  (+1 more)
core/streamdiffusionv2/configs/: wan_causal_dmd_v2v.yaml  wan_causal_dmd_v2v_14b.yaml
core/streamdiffusionv2/streamv2v/: __init__.py  inference.py  inference_pipe.py  inference_wo_batch.py
core/streamdiffusionv2/streamv2v/communication/: __init__.py  buffer_manager.py  data_containers.py  distributed_communicator.py  kv_cache_manager.py  model_data_transfer.py  utils.py
docs/: ARCHITECTURE.md  H100_GUIDED_TEST.md  ROADMAP.md  SSH_TUNNEL_RUNBOOK.md  VAST_DEPLOYMENT.md
scripts/: setup_h100_runtime.sh  sync_streamdiffusion_core.sh
(+3 files in other folders)
